[gd_scene load_steps=7 format=3 uid="uid://djrwtis53w6rh"]

[ext_resource type="Script" uid="uid://dnukjb1bwl7jm" path="res://scripts/additional/scrol_cards.gd" id="1_88x08"]
[ext_resource type="PackedScene" uid="uid://dhajq42i4unui" path="res://scenes/card.tscn" id="1_oxkep"]
[ext_resource type="FontFile" uid="uid://cs4nv7nl8f00l" path="res://font/Kenney Mini.ttf" id="3_6wlvc"]
[ext_resource type="AudioStream" uid="uid://moejq2g6b2kb" path="res://music/game_sounds/where_money.mp3" id="4_gtpep"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtpep"]
bg_color = Color(0.20392157, 0.20392157, 0.20392157, 0.4509804)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wlvc"]
bg_color = Color(0.7030746, 1.2732385, 0.31369436, 0.83137256)
border_color = Color(0, 0, 0, 1)

[node name="ScrolCards" type="Control"]
layout_mode = 3
anchor_right = 1.008
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -4.0
offset_right = -6.0400085
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_88x08")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 104.0
offset_right = 397.0
offset_bottom = 252.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gtpep")

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_top = 300.0
offset_right = 64.0
offset_bottom = 364.0

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 300.0
offset_right = 380.0
offset_bottom = 364.0

[node name="Card" parent="." instance=ExtResource("1_oxkep")]
scale = Vector2(0.8, 0.8)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 82.0
offset_top = 520.0
offset_right = 322.0
offset_bottom = 570.0
theme_override_fonts/font = ExtResource("3_6wlvc")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_6wlvc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gtpep")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 101.0
offset_right = 373.0
offset_bottom = 247.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Name" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_6wlvc")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Description" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(380, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_6wlvc")
theme_override_font_sizes/font_size = 24
autowrap_mode = 3

[node name="boost" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(380, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_6wlvc")
theme_override_font_sizes/font_size = 24
autowrap_mode = 3

[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
